Work on sidebar work

--- a/static/css/movies/initial.css
+++ b/static/css/movies/initial.css
@@ -2,3 +2,4 @@
 @import url('./movie-image.css');
 @import url('./movie-number.css');
 @import url('./movie-sidebar.css');
+@import url('./movie-action.css');
