--- a/static/css/movies/movie-move.css
+++ b/static/css/movies/movie-move.css
@@ -11,6 +11,7 @@
   background-repeat: no-repeat;
   background-position: -150px center;
   transition: all 0.35s ease-in-out;
+  overflow: hidden;
 }
 .movie:hover {
   width: 33%;
@@ -34,14 +35,6 @@
 }
 .movie__content {
   z-index: 5;
-}
-.movie__action {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  z-index: 10;
 }
 
 .movies.active .movie {
