--- a/static/css/movies/movie-sidebar.css
+++ b/static/css/movies/movie-sidebar.css
@@ -1,4 +1,5 @@
 .movie__sidebar {
+  width: 65px;
   position: absolute;
   z-index: 5;
   top: 0;
@@ -9,26 +10,47 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: flex-end;
+  align-items: center;
+  transition: all 0.3s ease;
 }
 .movie__sidebar--init {
+  width: 65px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 20px;
 }
 .movie__sidebar--init button {
   background: transparent;
   border: 1px solid #fff;
-  width: 65px;
-  height: 65px;
+  width: 0;
+  height: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 40px;
+  padding: 0;
+  box-sizing: border-box;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.2s ease-in-out 0.45s;
 }
 .movie__sidebar--init button i {
   color: var(--white);
 }
 .movie__sidebar--init .separator {
+  width: 1px;
+  height: 100%;
+  background-color: var(--white);
+  opacity: 0.2;
+  margin: 0 auto;
+  box-sizing: border-box;
+  transition: all 0.45s ease-in-out 0.2s;
 }
 .movie__sidebar--init .separator-down {
+  height: 0;
 }
 
 .movie__sidebar--name {
@@ -36,18 +58,46 @@
   writing-mode: vertical-rl;
   transform: rotate(180deg);
   font-size: 22px;
-  line-height: 30px;
+  line-height: 65px;
   margin-bottom: 10px;
+  flex-shrink: 0;
+  transition: all 0.3s ease-in-out;
 }
 
 .movie__sidebar i {
   color: var(--yellow);
   display: block;
-  width: 30px;
+  width: 65px;
   height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 20px;
   line-height: 20px;
+}
+
+/*ACTIVE*/
+.movie.open .movie__sidebar--init {
+  padding-bottom: 10px;
+}
+.movie.open .movie__sidebar--init button {
+  width: 65px;
+  height: 65px;
+  opacity: 1;
+  visibility: visible;
+}
+.movie.open .movie__sidebar--init .separator,
+.movie.open .movie__sidebar--init .separator-down {
+  height: calc(calc(100% - 100px) / 2);
+}
+
+.movie.open .movie__sidebar--name {
+  height: 0;
+  opacity: 0;
+}
+
+
+.movies.active .movie:not(.open):hover .movie__sidebar {
+  width: 100%;
+  padding-right: 0;
 }
