--- a/static/css/movies/initial.css
+++ b/static/css/movies/initial.css
@@ -3,3 +3,4 @@
 @import url('./movie-number.css');
 @import url('./movie-sidebar.css');
 @import url('./movie-action.css');
+@import url('./movie-content.css');
