--- a/static/css/movies/movie-move.css
+++ b/static/css/movies/movie-move.css
@@ -35,6 +35,15 @@
 }
 .movie__content {
   z-index: 5;
+  color: var(--white);
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .movies.active .movie {
