--- a/static/css/movies/movie-move.css
+++ b/static/css/movies/movie-move.css
@@ -3,6 +3,8 @@
   height: 100vh;
   width: 100%;
   overflow: hidden;
+  z-index: 2;
+  transition: all 0.3s ease-in-out;
 }
 .movie {
   cursor: pointer;
@@ -13,6 +15,7 @@
   transition: all 0.35s ease-in-out;
   overflow: hidden;
 }
+
 .movie:hover {
   width: 33%;
   background-position: -75px center;
@@ -68,4 +71,35 @@
 .movies.active .movie:hover::before {
   opacity: 0;
   transition: all 0.35s ease-in-out;
+}
+
+/*VIDEO*/
+.movies.show_video {
+  opacity: 0;
+  transition-delay: 0.2s;
+}
+.movies.play {
+  z-index: 30;
+}
+.movies.show_video .movie.open {
+  width: 100%;
+  background-size: cover;
+  transition: all 0.3s ease-in-out;
+}
+.movies.show_video .movie:not(.open) {
+  overflow: hidden;
+  width: 0px;
+}
+
+.movies.show_video .movie__number {
+  left: -90px;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.movies.show_video .movie__content,
+.movies.show_video .movie__sidebar {
+  right: -90px;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
 }
